--- a/index.html
+++ b/index.html
@@ -15,10 +15,30 @@
       td {
         border: 1px solid black;
       }
+      .scale {
+        text-align: center;
+        font-weight: 600;
+      }
 
-      .proba {
+      #title {
+        font-size: 25px;
+        text-align: center;
+      }
+
+      #conseqScale {
+        height: 35px;
+      }
+
+      .probability {
+        font-weight: 600;
+        text-align: center;
+      }
+
+      .probaTitle {
+        font-size: 25px;
         writing-mode: vertical-rl;
         text-orientation: sideways;
+        text-align: center;
       }
 
       .data {
@@ -95,7 +115,7 @@
 
       @keyframes animate {
         0% {
-          transform: scale(0.8);
+          transform: scale(0.6);
         }
 
         100% {
