--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
     <style>
-      .newTable {
-        border: 1px solid black;
+      table,
+      td,
+      th {
+        border: 1px solid #adb5bd;
       }
 
-      th,
-      td {
-        border: 1px solid black;
+      table {
+        border-collapse: collapse;
       }
+
       .scale {
         text-align: center;
         font-weight: 600;
@@ -42,84 +44,95 @@
       }
 
       .data {
-        background-color: #89fc00;
+        background-color: #38b000;
         height: 30px;
         width: 85px;
       }
 
       .orange {
-        background-color: #ffc100;
+        background-color: #f3722c;
       }
 
       .red {
-        background-color: #ee1a24;
+        background-color: #c71f37;
       }
 
-      .data:before,
-      .data:after {
+      .data:hover {
+        background-color: #264653;
+      }
+
+      td.data {
+        position: relative;
+        animation: pulse 2s infinite;
+      }
+
+      /* .pulse:before,
+      .pulse:after {
         content: "";
         position: absolute;
         height: 32px;
         width: 85px;
         /* left: 248px; */
-        /* top: 59px;
-        right: 15px;
-        bottom: 30px; */
-        /* border: 1px solid #000000; */
-        background-color: #92f635d2;
+      /* top: 59px; */
+      /* right: 15px;*/
+      /* bottom: 30px; */
+      /* border: 1px solid #000000; */
+      /* background-color: #92f635d2;
         border: 1px solid black;
         animation: animate 0.5s linear infinite;
-      }
+      } */
 
-      .data:after {
+      /* .pulse:after {
         animation-delay: 0.6s;
-      }
+      } */
 
-      .orange:before,
-      .orange:after {
+      /* .pulseo:before,
+      .pulseo:after {
         content: "";
         position: absolute;
         height: 32px;
-        width: 85px;
-        /* left: 338px; */
-        /* top: 59px;
+        width: 85px; */
+      /* left: 338px; */
+      /* top: 59px;
         right: 15px;
         bottom: 30px; */
-        background-color: #ffc100;
+      /* background-color: #ffc100;
         border: 1px solid black;
         animation: animate 0.5s linear infinite;
-      }
+      } */
 
-      .orange:after {
+      /* .pulseo:after {
         animation-delay: 0.6s;
-      }
+      } */
 
-      .red:before,
-      .red:after {
+      /* .pulser:before,
+      .pulser:after {
         content: "";
         position: absolute;
         height: 32px;
-        width: 85px;
-        /* left: 430px; */
-        /* top: 59px;
+        width: 85px; */
+      /* left: 430px; */
+      /* top: 59px;
         right: 15px;
         bottom: 30px; */
-        background-color: #ee1a24;
+      /* background-color: #ee1a24;
         border: 1px solid black;
         animation: animate 0.5s linear infinite;
       }
 
-      .red:after {
+      .pulser:after {
         animation-delay: 0.6s;
-      }
+      } */
 
-      @keyframes animate {
+      @keyframes pulse {
         0% {
-          transform: scale(0.6);
+          opacity: 0.8;
         }
-
+        50% {
+          opacity: 1;
+        }
         100% {
-          transform: scale(1);
+          opacity: 0.8;
         }
       }
     </style>
