:coffin: removed useless code, cleaning app.js file :coffin:

--- a/index.html
+++ b/index.html
@@ -77,72 +77,10 @@
         background-color: #c71f37;
       }
 
-      .data:hover {
-        background-color: #264653;
-      }
-
-      td.data {
+      td.pulse {
         position: relative;
         animation: pulse 1s infinite;
       }
-
-      /* .pulse:before,
-      .pulse:after {
-        content: "";
-        position: absolute;
-        height: 32px;
-        width: 85px;
-        /* left: 248px; */
-      /* top: 59px; */
-      /* right: 15px;*/
-      /* bottom: 30px; */
-      /* border: 1px solid #000000; */
-      /* background-color: #92f635d2;
-        border: 1px solid black;
-        animation: animate 0.5s linear infinite;
-      } */
-
-      /* .pulse:after {
-        animation-delay: 0.6s;
-      } */
-
-      /* .pulseo:before,
-      .pulseo:after {
-        content: "";
-        position: absolute;
-        height: 32px;
-        width: 85px; */
-      /* left: 338px; */
-      /* top: 59px;
-        right: 15px;
-        bottom: 30px; */
-      /* background-color: #ffc100;
-        border: 1px solid black;
-        animation: animate 0.5s linear infinite;
-      } */
-
-      /* .pulseo:after {
-        animation-delay: 0.6s;
-      } */
-
-      /* .pulser:before,
-      .pulser:after {
-        content: "";
-        position: absolute;
-        height: 32px;
-        width: 85px; */
-      /* left: 430px; */
-      /* top: 59px;
-        right: 15px;
-        bottom: 30px; */
-      /* background-color: #ee1a24;
-        border: 1px solid black;
-        animation: animate 0.5s linear infinite;
-      }
-
-      .pulser:after {
-        animation-delay: 0.6s;
-      } */
 
       @keyframes pulse {
         0% {
