--- a/index.html
+++ b/index.html
@@ -29,15 +29,9 @@
 
       #conseqScale {
         height: 35px;
-        font-weight: 600;
-      }
-
-      .numberScale {
-        font-weight: 300;
       }
 
       .probability {
-        font-weight: 600;
         text-align: center;
       }
 
@@ -52,18 +46,16 @@
       .probaScale {
         height: 30px;
         width: 85px;
-        font-weight: 300;
         text-align: center;
       }
 
       .numberProba {
         height: 30px;
         width: 45px;
-        font-weight: 300;
         text-align: center;
       }
 
-      .data {
+      .green {
         background-color: #38b000;
         height: 30px;
         width: 85px;
